--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=80
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/hrapp
+spring.datasource.username=postgres
+spring.datasource.password=user
+spring.jpa.hibernate.ddl-auto=create
+spring.main.allow-circular-references= true
+spring.jpa.show-sql=true
